2014-08-26  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/server_ctl/CommandLine.cpp (mCmdlist): correctly handle
	the command list for autocompletion.
	* src/configure.ac: switch to C++11.

	* src/tools/server_ctl/CommandLine.cpp: almost full cpp implementation.
	* src/tools/server_ctl/main.cpp: unused and removed xmalloc().

	* src/tools: updated GNU headers date for 2014.
	* src/tools: added GNU headers to all files.

2014-08-12  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/server_ctl: starts to implement command map.
	* configure.ac (AC_INIT): modernized call.

2012-10-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/server_ctl/main.cpp (main): add a basic auto
	completion feature.
	* src/tools/server_ctl/main.cpp (main): a really basic binary with
	readline history.
	* DEPENDENCIES: add GNU readline dependency for server-ctl.
	* configure.in: Checks for libreadline library and headers.
	* configure.in: add generation of tools Makefiles.

2012-10-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/main.cpp: create a basic asynchronous server
	* src/Makefile.am: Added -lboost_system needed by filesystem.
	* configure.in: check for Asio header.

2012-05-08  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: correctly set PACKAGE_VERSION.
	* src/main.cpp: customize logger.

2012-05-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/main.cpp: creates static_logger and start to use it.
	* src/Makefile.am: CPPFLAGS and LDADD now uses rainbrurpg-logger flags.
	* configure.in: PKG_CHECK_MODULES checks for rainbrurpg-logger.

2012-02-14  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: first version to build a very basic src/main.cpp.
	* src/main.cpp: very basic file.